<resources>
    <string name="app_name">Verifie</string>
    <string name="identity_verification">Identity Verification</string>
    <string name="passport">Passport</string>
    <string name="you_will_take_a_picture_of_it_in_the_next_step">You will take a picture of it in the next step.</string>
    <string name="select_a_document">Select a Document</string>
    <string name="driving_license">Driving License</string>
    <string name="national_identity_card">National Identity Card</string>
    <string name="residence_permit_card">Residence Permit Card</string>
    <string name="page_info_passport">Passport Face Page</string>
    <string name="page_info_id_card">Scan Identity Card Front</string>
    <string name="page_info_residence_card">Residence Permit Card Page</string>
    <string name="scan_info_passport">Place your document within the frame until it is captured automatically</string>
    <string name="scan_info_id_card">Place your document within the frame until it is captured automatically</string>
    <string name="scan_info_residence_card">Place your document within the frame until it is captured automatically</string>
    <string name="scan_backside_of_doc">Scan Identity Card Back</string>
    <string name="scan_backside_of_doc_info">Place your document within the frame until it is captured automatically</string>
    <string name="verification_result">Verification Result</string>
    <string name="images">Images</string>
    <string name="images_data">Images Data</string>
    <string name="document_info">Document Info</string>
    <string name="now_place_your_phone_directly_on_top_of_your_document_so_we_can_connect_securely">Place your phone directly on top of your document as shown in the picture below.</string>
    <string name="scan_document">Scan Document</string>
    <string name="other_flows">Other flows</string>
    <string name="check_liveness">Check Liveness</string>
</resources>
