<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBEB"
    android:orientation="vertical"
    tools:context=".IdentityVerificationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        style="?attr/toolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="144px"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/identity_verification"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/select_a_document"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/you_will_take_a_picture_of_it_in_the_next_step"
            android:textColor="#6E687E"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/passport_layout_item"
            layout="@layout/layout_document_item" />

        <!--        <include-->
        <!--            android:id="@+id/driving_license_layout_item"-->
        <!--            layout="@layout/layout_document_item" />-->

        <include
            android:id="@+id/national_id_layout_item"
            layout="@layout/layout_document_item" />

<!--        <include-->
<!--            android:id="@+id/residence_permit_layout_item"-->
<!--            layout="@layout/layout_document_item" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ECEBEB"
            android:text="@string/other_flows"
            android:textAllCaps="true"
            android:textColor="#6E687E"
            android:paddingTop="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"/>

        <include
            android:id="@+id/liveness_check_layout_item"
            layout="@layout/layout_document_item" />
    </LinearLayout>
</LinearLayout>