<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEBEB"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/verification_result"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:text="Verification Result" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/images"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Images" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/document_image"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="25dp"
                        android:adjustViewBounds="true"
                        android:maxHeight="250dp"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/ic_success" />

                    <ImageView
                        android:id="@+id/face_image"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:maxHeight="250dp"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/ic_success" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/images_data"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Images Data" />

                <TextView
                    android:id="@+id/face_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />


                <TextView
                    android:id="@+id/facial_liveness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/document_info_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/document_info"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Document Info" />

                <TextView
                    android:id="@+id/document_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/document_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/birth_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/expiry_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/document_valid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D8D8D8" />

                <TextView
                    android:id="@+id/next_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    tools:text="Label" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>